[package]
name = "solana-sdk-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.30.0", features = ["async"] }
anchor-lang = "0.30.0"
anyhow = "1.0.83"
bincode = "1.3.3"
bip39 = "2.0.0"
dotenv = "0.15.0"
serde = { version = "1.0.201", features = ["derive"] }
solana-client = "1.18.12"
solana-sdk = "1.18.12"
tokio = { version = "1.37.0", features = ["full"] }
